--- a/grand-city-race/src/locales/en.json
+++ b/grand-city-race/src/locales/en.json
@@ -6,7 +6,7 @@
     "clue": "Clue",
     "hint": "Hint",
     "items": "items",
-    "callHotline": "Call Hotline",
+    "hotline": "Hotline",
     "askGM": "Ask your gamemasters to give you a hint on where to go.",
     "findLocation": "Find the location to activate the quest.",
     "locationDenied": "Location access denied. Please enable location services."
